--- a/demo/src/main/resources/templates/scraping_insert.html
+++ b/demo/src/main/resources/templates/scraping_insert.html
@@ -11,7 +11,7 @@
         <form id="scrapeForm" action="http://localhost:3000/scrape" method="post">
             <input type="text" name="inputUrl" required>
             <!-- スクレイピング開始 -->
-            <input type="submit" value="Scrape">
+            <input type="submit" value="Scrape" id="Scrape">
         </form>
         <form id="submitForm" th:action="@{/insert}" method="post">
             <!-- jsより受け取ったデータ -->
@@ -22,7 +22,22 @@
             <!-- コントローラクラスに取得したデータを送信 -->
             <input type="submit" value="Submit" style="display: none;">
         </form>
-        <h3 th:text="${message}">解析失敗</h3>
+        <h3 th:text="${message}">解析失敗</h3><br>
+        <table>
+            <tr>
+                <th>商品名</th>
+                <th>登録価格</th>
+                <th>最新価格</th>
+                <th>URL</th>
+            </tr>
+            <tr th:each="item: ${itemList}">
+                <td th:text="${item.itemName}">商品名</td>
+                <td th:text="${item.priceOriginal}">登録価格</td>
+                <td th:if="${item.priceLatest == null}" th:text="'取得不可'">最新価格</td>
+                <td th:unless="${item.priceLatest == null}" th:text="${item.priceLatest}">最新価格</td>
+                <td th:text="${item.url}">URL</td>
+            </tr>
+        </table>
     </div>
     <script src="/js/scraping.js"></script>
 </body>
