--- a/demo/src/main/resources/templates/scraping_insert.html
+++ b/demo/src/main/resources/templates/scraping_insert.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webスクレイパー</title>
+    <link rel="stylesheet" th:href="@{/css/scraping.css}" href="../static/css/scraping.css">
 </head>
 <body>
-    <div style="text-align: center; margin-top: 50px;">
+    <div>
         <h3>URLを入力してください</h3>
         <form id="scrapeForm" action="http://localhost:3000/scrape" method="post">
             <input type="text" name="inputUrl" required>
@@ -29,15 +30,25 @@
                 <th>登録価格</th>
                 <th>最新価格</th>
                 <th>URL</th>
+                <th>削除</th>
             </tr>
             <tr th:each="item: ${itemList}">
                 <td th:text="${item.itemName}">商品名</td>
                 <td th:text="${item.priceOriginal}">登録価格</td>
-                <td th:if="${item.priceLatest == null}" th:text="'取得不可'">最新価格</td>
+                <td th:if="${item.priceLatest == null}" th:text="'データなし'">最新価格</td>
                 <td th:unless="${item.priceLatest == null}" th:text="${item.priceLatest}">最新価格</td>
                 <td th:text="${item.url}">URL</td>
+                <td>
+                    <form th:action="@{/delete}" method="post">
+                        <input type="hidden" name="id" th:value="${item.id}">
+                        <input type="submit" value="削除">
+                    </form>
+                </td>
             </tr>
         </table>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="ログアウト">
+        </form>
     </div>
     <script src="/js/scraping.js"></script>
 </body>
