--- a/demo/src/main/resources/static/css/scraping.css
+++ b/demo/src/main/resources/static/css/scraping.css
@@ -23,3 +23,9 @@ table tr:nth-child(odd) {
 table tr:nth-child(even) {
     background-color: #ffffff; /* 白 */
 }
+
+.error {
+    color: red;
+    font-weight: bold;
+    font-size: 15px;
+}
